@@ -8,7 +8,7 @@ no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
 use parent 'Class::Accessor';
 
-our $VERSION = '1.10';
+our $VERSION = '1.11';
 
 Travel::Status::DE::EFA::Result->mk_ro_accessors(
 	qw(countdown date delay destination is_cancelled info key line lineref
@@ -85,10 +85,11 @@ sub route_interesting {
 
 		while ( @via_show < $max_parts and @via_main ) {
 			my $stop = shift(@via_main);
+
 			# FIXME cannot smartmatch $stop since it became an object
-#			if ( $stop ~~ \@via_show or $stop == $last_stop ) {
-#				next;
-#			}
+			#			if ( $stop ~~ \@via_show or $stop == $last_stop ) {
+			#				next;
+			#			}
 			push( @via_show, $stop );
 		}
 	}
@@ -123,7 +124,7 @@ departure received by Travel::Status::DE::EFA
 
 =head1 VERSION
 
-version 1.10
+version 1.11
 
 =head1 DESCRIPTION
 
